--- a/app/views/users/login.html.erb
+++ b/app/views/users/login.html.erb
@@ -6,23 +6,26 @@
                 <i class="fa fa-key" aria-hidden="true"></i>
             </div>
             <div class="col-lg-12 login-title">
-                WELCOME TO ROR CHAT
+                RORCHAT LOGIN
             </div>
 
             <div class="col-lg-12 login-form">
                 <div class="col-lg-12 login-form">
-                    <form>
+                    <form action="/login" method="post">
                         <div class="form-group">
                             <label class="form-control-label">USERNAME</label>
-                            <input type="text" class="form-control">
+                            <input type="text" class="form-control" name="user[username]" id="user_username">
                         </div>
                         <div class="form-group">
                             <label class="form-control-label">PASSWORD</label>
-                            <input type="password" class="form-control" i>
+                            <input type="password" class="form-control" name="user[password]" id="user_password">
                         </div>
+
+
 
                         <div class="col-lg-12 loginbttm">
                             <div class="col-lg-6 login-btm login-text">
+
                                 <!-- Error Message -->
                             </div>
                             <div class="col-lg-6 login-btm login-button">
