--- a/app/views/users/signup.html.erb
+++ b/app/views/users/signup.html.erb
@@ -6,27 +6,34 @@
                 <i class="fa fa-key" aria-hidden="true"></i>
             </div>
             <div class="col-lg-12 login-title">
-                WELCOME TO ROR CHAT
+                RORCHAT SIGNUP
             </div>
 
             <div class="col-lg-12 login-form">
                 <div class="col-lg-12 login-form">
-                    <form>
+                    <form action="/signup" method="post">
+                        <div class="form-group">
+                            <label class="form-control-label">FULL NAME</label>
+                            <input type="text" class="form-control" name="user[fullname]" id="user_fullname">
+                        </div>
                         <div class="form-group">
                             <label class="form-control-label">USERNAME</label>
-                            <input type="text" class="form-control">
+                            <input type="text" class="form-control" name="user[username]" id="user_username">
                         </div>
                         <div class="form-group">
                             <label class="form-control-label">PASSWORD</label>
-                            <input type="password" class="form-control" i>
+                            <input type="password" class="form-control" name="user[password]" id="user_password">
                         </div>
+
+
 
                         <div class="col-lg-12 loginbttm">
                             <div class="col-lg-6 login-btm login-text">
+
                                 <!-- Error Message -->
                             </div>
                             <div class="col-lg-6 login-btm login-button">
-                                <button type="submit" class="btn btn-outline-primary">LOGIN</button>
+                                <button type="submit" class="btn btn-outline-primary">SIGNUP</button>
                             </div>
                         </div>
                     </form>
